SalaReuniao - parametros de coneccao com DB

--- a/salaReuniao/src/main/resources/application.properties
+++ b/salaReuniao/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:h2:mem:testsalareuniao
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sr
 spring.datasource.password=sr
-spring.jpa.database-platform=hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8082
