--- a/salaReuniao/pom.xml
+++ b/salaReuniao/pom.xml
@@ -8,14 +8,19 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.github.antonioticelso</groupId>
 	<artifactId>salaReuniao</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
+
 	<name>salaReuniao</name>
 	<description>Demo project for Spring Boot Sala de Reuniao</description>
+
 	<properties>
 		<java.version>11</java.version>
+		<springfox.version>2.9.2</springfox.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,6 +57,18 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.1.0.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
