Controllers meet room - sala de reuniao

--- a/frontClientRoom/angular.json
+++ b/frontClientRoom/angular.json
@@ -23,12 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+//              "src/styles.css",
+//              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+//              "node_modules/jquery/dist/jquery.min.js",
+//              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -101,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "fc7be2ec-6033-4f2d-ab2b-ee11b9af0104"
   }
 }
