--- a/frontClientRoom/package.json
+++ b/frontClientRoom/package.json
@@ -31,7 +31,7 @@
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "~14.2.8",
     "@angular/compiler-cli": "^14.2.0",
-    "@angular/language-service": "~9.0.0-rc.7",
+    "@angular/language-service": "~14.2.8",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
