--- a/frontRoomMeet/.gitignore
+++ b/frontRoomMeet/.gitignore
@@ -1,4 +1,79 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+NOVO IGNORE:
+
+
+HELP.md
+!.mvn/wrapper/maven-wrapper.jar
+!*/src/main/*/target/
+!*/src/test/*/target/
+
+### IDEs and Editors ###
+.apt_generated
+.settings
+.springBeans
+.sts4-cache
+.project
+.classpath
+.factorypath
+.settings/
+.metadata/
+.idea
+.idea/
+*.sublime-workspace
+.c9/
+*.launch
+
+### IntelliJ IDEA ###
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!*/src/main/*/build/
+!*/src/test/*/build/
+
+.vscode/
+
+### IDE - VSCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### Compiled Output ###
+target/
+bin/
+dist/
+.apt_generated/
+
+### Tests ###
+*.log
+*.db
+tmp/
+/Old/
+
+### Cache ###
+package-lock.json
+.sass-cache
+
+### Dependencies ###
+node_modules/
+
+### e2e ###
+/e2e/*.js
+/e2e/*.map
+
+### System Files ###
+.DS_Store
+Thumbs.db
+/RemoteSystemsTempFiles/
+/Servers/
 
 # Compiled output
 /dist
@@ -11,21 +86,6 @@
 npm-debug.log
 yarn-error.log
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 .history/*
 
 # Miscellaneous
@@ -37,6 +97,3 @@ yarn-error.log
 testem.log
 /typings
 
-# System files
-.DS_Store
-Thumbs.db
