Create paramiters DB - CityApi

--- a/citiesApi/src/main/resources/application.properties
+++ b/citiesApi/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=sr
 spring.datasource.password=sr
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8087
